Fix scroll on mobile, make sure fullscreen is not set on mobile to avoid style issues.

--- a/scss/partials/_cmail.scss
+++ b/scss/partials/_cmail.scss
@@ -20,6 +20,9 @@ div.cmail-outer {
     background-color: white;
     width: 100%;
     box-shadow: none;
+    overflow-x: hidden;
+    overflow-y: auto;
+    background-color: $grey_num_2;
   }
 
   &.fullscreen {
